--- a/Robot-Trial/.local/ProjectSettings.json
+++ b/Robot-Trial/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"OpenedDocuments":"[]"}
+{"OpenedDocuments":"[\"CustomerTrackerAutomation.xaml\",\"AutomationCreateSMS.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}"}
