--- a/First Robot/.local/ProjectSettings.json
+++ b/First Robot/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"OpenedDocuments":"[\"robot pertama.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}"}
+{"OpenedDocuments":"[\"robot pertama.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}","ProjectWatches":"{\"Value\":[]}"}
